k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pushmsteam
  namespace: push-msteams
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pushmsteam
  template:
    metadata:
      labels:
        app: pushmsteam
    spec:
      containers:
      - name: api
        image: harbor.pgbank.com.vn/monitoring/pushmsteams:v1.29
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 256Mi
