k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pushmsteam
  namespace: push-msteams
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - pushmsteam.pgbank.com.vn
    secretName: pgbank-tls
  rules:
  - host: pushmsteam.pgbank.com.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pushmsteam
            port:
              number: 80
