k8s/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: push-chat-ingress
  namespace: push-chat
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - push-chat.pgbank.com.vn
    secretName: pgbank-tls
  rules:
  - host: push-chat.pgbank.com.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: push-chat-service
            port:
              number: 80
